Fix modal z-index

--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -8,7 +8,7 @@
   height:100vh;
   padding: 40px;
   box-sizing: border-box;
-  z-index:4000;
+  z-index:600;
   overflow-y: hidden;
   backdrop-filter: blur(7px);
   
